--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,10 @@ h1 {
   color: var(--tuscan-red); 
 }
 
+h2 {
+  color: var(--tuscan-red); 
+}
+
 footer {
   background-color: var(--tuscan-red);
   color: var(--main-bg-color);
@@ -81,4 +85,8 @@ footer {
 	font-size: 18px;
 	font-weight: 500;
 	text-align: left;
+}
+
+#no-additional-info{
+	text-align: center;
 }
