fixed additional info bug, improving css

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 :root {
   --main-bg-color: #FEF5EF;
+  --off-white: #fff;
   --text-color: #141414;
   --tuscan-gold: #F1D9A7;
   --khaki: #C6B89E;
@@ -11,7 +12,10 @@ body {
   background-color: var(--main-bg-color); 
   color: var(--text-color); 
   font-family: sans-serif;
-  margin: 0;
+  margin-left: 50px;
+  margin-right: 50px;
+  height: 100%;
+  min-height: 100%;
 }
 
 p {
@@ -37,6 +41,36 @@ footer {
 #genderButtons {
 	display: none;
 }
+
+/* Adapted from sample here https://www.w3schools.com/css/tryit.asp?filename=trycss_table_fancy */
+
+#laureatesTable {
+	width: 100%;
+	border-collapse: collapse;
+}
+
+#laureatesTable td, #laureatesTable th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+#laureatesTable tr:nth-child(even){
+	background-color: var(--off-white);
+}
+
+#laureatesTable tr:hover {
+	background-color: #ddd;
+}
+
+#laureatesTable th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: var(--tuscan-red);
+    color: var(--main-bg-color);
+}
+
+
 
 /* https://www.w3schools.com/howto/howto_css_modals.asp CSS modal start*/
 
