--- a/css/styles.css
+++ b/css/styles.css
@@ -70,7 +70,11 @@ footer {
     color: var(--main-bg-color);
 }
 
-
+#info_button {
+	width: 100%;
+	height: 25px;
+	color: var(--tuscan-red);
+}
 
 /* https://www.w3schools.com/howto/howto_css_modals.asp CSS modal start*/
 
