--- a/css/styles.css
+++ b/css/styles.css
@@ -174,3 +174,27 @@ footer {
 #no-additional-info{
 	text-align: center;
 }
+
+/* https://www.w3schools.com/howto/howto_js_scroll_to_top.asp (start)*/
+#top-button {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: var(--tuscan-red); /* Set a background color */
+    color: var(--main-bg-color); /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+    font-size: 18px; /* Increase font size */
+}
+
+#top-button:hover {
+	/* I want it to look the same as the Submit button*/
+    background-color: var(--grain-yellow);
+	color: var(--tuscan-red);
+}
+/* https://www.w3schools.com/howto/howto_js_scroll_to_top.asp (end)*/
