darkened footer colour

--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,7 @@ input[type=submit]:hover {
 /* Adapted from w3schools sample here https://www.w3schools.com/css/tryit.asp?filename=trycss_forms (end) */
 
 footer {
-  	background-color: #764248;
+  	background-color: #47262a;
   	color: #FEF5EF;
   	padding: 20px;
   	text-align: center;
